styles.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
body {
  margin: 0;
  font-family: "Fira Code", monospace;
  background-color: #3d87de;
  color: white;
}
h3 {
  font-size: 2rem;
  margin: 20px
}
p {
  font-size: 18px;
}

a {
  color: #3d87de;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
section {
  background-color: black;
  margin: 0;
}




#navbar {
  opacity: 0;
  transition: opacity 300ms;
  position: fixed;
  z-index: 10;
  text-transform: uppercase;
  display: flex;
  justify-content: center;
  width: 100%;
}
#navbar:hover {
  opacity: 1;
}
#navbar > a{
  display: inline-block;
  color: white;
  padding: 10px;
  margin: 10px;
  border-radius: 20px;
}
#navbar > a:hover {
  background-color: rgba(0,0,0,0.4);
  backdrop-filter: blur(10px);
}



#welcome-section {
  color: black;
  padding: 0;
  height: 100vh;
  background-color: transparent;
}
.title {
  width: 100%;
  text-align: center;
  margin-top: 20vh;
  position: fixed;
  z-index: -1000;

}
.title h1 {
  font-size: clamp(30px, 6vw, 60px);
}
.hero-image {
  width: 100%;
  overflow: hidden;
  height: 100vh;
  position: absolute;
}
.hero-image > img {
  mask-image: linear-gradient(rgba(0, 0, 0, 1), transparent);
  -webkit-mask-image: linear-gradient(
    transparent 0%,
    black 50%,
    black 50%,
    black 100%
    );
  height: clamp(100px, 80vh, 1000px);
  /* height: 500px; */
  display: block;
  bottom: 0px;
  position: absolute;
}








#about-me {
  color: white;
  padding: 25px;
  margin: 0;
}
.circular-frame {
  border-radius: 50%;
  margin: 0px auto;
  overflow: hidden;
  aspect-ratio: 1;
  width: 300px;
}
#headshot, .circular-frame > * {
  width: 100%;
  height: 100%;
}
#description {
  margin: 0 auto;
  text-align: center;
  max-width: 800px;
}
#description > p {
  margin: 10px;
}
#description > p:last-child {
  font-weight: bold;
}




#projects {
  width: 100%;
  padding: 200px 0;
}
#projects > div {
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
#projects > div > a {
  display: inline-block;
  margin: 0;
  padding: 20px;
  width: 250px;
}
.project-tile{
  display: inline-block;
  --description: 0;
  width: 250px;
  height: 250px;
  border-radius: 50px;
  overflow: hidden;
  color: white;
}
.project-tile:hover {
  --description: 1;
}
.project-tile > img {
  object-fit: cover;
  width: 250px;
  height: 250px;
  display: block;
  z-index: 1;
}
.project-tile > p {
  opacity: var(--description);
  border-radius: 50px;
  position: relative;
  z-index: 2;
  transition: opacity 300ms;
  height: 300px;
  padding: 50% 5%;
  top: -300px;
  background: linear-gradient(
    transparent,
    rgba(0,0,0,0.8) 50%);
}

#turrell-project{
  box-shadow: 0 0 60px #b343b5;
}
#interest-project {
  box-shadow: 0 0 60px lightblue;
}
#encryption-project {
  box-shadow: 0 0 60px rgb(100,100,100);
}
#calculator-project {
  box-shadow: 0 0 60px gray;
}
#basketball-project {
  box-shadow: 0 0 60px white;
}
#spiral-project {
  box-shadow: 0 0 60px #b0b058;
}





#contact {
  padding: 100px 0;
  text-align: center;
  width: 100%;
}
#contact > ul {
  list-style-type: none;
  padding: 0;
  width: 100%;
}
#contact > ul > li {
  padding: 20px;
}



@media screen and (max-width: 500px) {
  nav {
    display: flex;
    justify-content: space-evenly;
  }
  nav > a {
    margin: 0 !important;
  }


  .project-tile {
    --description:1;
  }
}

